@@ -17,30 +17,25 @@ public class CorsConfig {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
 
-        // Разрешить конкретный origin (без "*")
+        // Разрешаем запросы с локального фронтенда
         config.setAllowedOrigins(List.of("http://localhost:5173"));
-
-        // Разрешить отправку credentials (cookies, Authorization header)
+        
+        // Разрешаем учетные данные
         config.setAllowCredentials(true);
 
-        // Разрешить конкретные заголовки
-        config.setAllowedHeaders(Arrays.asList(
-            "Origin",
-            "Content-Type",
-            "Accept",
-            "Authorization"
-        ));
+        // Разрешаем все заголовки
+        config.addAllowedHeader("*");
 
-        // Разрешить методы
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-
-        // Установить exposed headers
-        config.setExposedHeaders(List.of("Authorization"));
-
-        // Max age для preflight
+        // Разрешаем все методы
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"));
+        
+        // Экспозиция заголовков
+        config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type", "Content-Length", "Content-Disposition"));
+        
+        // Увеличиваем время кеширования предварительных запросов
         config.setMaxAge(3600L);
 
-        // Применить ко всем путям
+        // Регистрируем конфигурацию для всех путей, включая /api/**
         source.registerCorsConfiguration("/**", config);
 
         return new CorsFilter(source);
